fix(style): bugfix stretching block-images, part 2
#pikabu, turboext/css#31

--- a/hosts/pikabu.ru/style.css
+++ b/hosts/pikabu.ru/style.css
@@ -92,6 +92,11 @@
             margin-left: -18px;
         }
 
+        @media screen and (max-width: 480px) {
+            width: 101vw !important; /* переопределение inline стилей */
+            background-size: cover !important; /* переопределение inline стилей */
+        }
+
         .image__img {
             width: 100%;
             height: 100%;
